deploy/k8s/app-svc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-svc-deployment
  labels:
    app: app-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-svc
  template:
    metadata:
      labels:
        app: app-svc
    spec:
      containers:
      - name: app-svc
        image: 038107017222.dkr.ecr.us-east-1.amazonaws.com/testing:0.0.1
        imagePullPolicy: Never
      - name: dnsutils
        image: gcr.io/kubernetes-e2e-test-images/dnsutils:1.3
        command:
          - sleep
          - "3600"
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
