deploy/k8s/app-svc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  type: LoadBalancer
  selector:
    app: app-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
